# AjAjEjAj_hackology_official

./: README.md  pyproject.toml
data/: ficzurs_koefiszietns.json  ficzurs_koefiszietns_2.json  ficzurs_koefiszietns_3.json  original_data.json  product1.csv  product2.csv  product3.csv  shop_data_merged.json  x.csv
notebooks/: biedronki.ipynb  categ_feat_lgm.ipynb  new_shops_data.ipynb  numerical_feat_linear_reg.ipynb  shops_data.ipynb
src/: augment_data.py  fix_data.py  gen_product.py  generate_profits_for_shops.py  merged_data.csv  parse_html.py  request.py  sales.csv
src/hackology/: join_sklepy.py
visualize/: pyproject.toml
visualize/src/visualize/: 00-eda.ipynb  data.py  main.py  mapper.py  plots.py  shop.json
visualize/src/visualize/assets/: header.css
