[project]
name = "visualize"
version = "0.1.0"
description = "Default template for PDM package"
authors = [
    {name = "Mikolaj Szawerda", email = "mikolaj.szawerda@gmail.com"},
]
dependencies = [
    "plotly>=5.24.1",
    "dash>=2.18.1",
    "pandas>=2.2.3",
    "dash-design-kit>=0.0.1",
    "dash-bootstrap-components>=1.6.0",
    "jupyter>=1.1.1",
    "matplotlib>=3.9.2",
]
requires-python = "==3.12.*"
readme = "README.md"
license = {text = "MIT"}


[tool.pdm]
distribution = false
